<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.trip.TripRegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/fmTripRegisterLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/fmTripRegisterError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:textSize="11sp"
                app:lineHeight="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:autofillHints=""
                android:text="Trip Name"
                android:textColor="@color/black"
                android:textSize="15dp"
                />

            <EditText
                android:id="@+id/fmTripRegisterName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/label_name"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="15sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:autofillHints=""
                android:text="Destination"
                android:textColor="@color/black"
                android:textSize="15dp"
                />

            <EditText
                android:id="@+id/fmTripRegisterDestination"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/label_destination"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:autofillHints=""
                android:text="Description"
                android:textColor="@color/black"
                android:textSize="15dp"
                />

            <EditText
                android:id="@+id/fmTripRegisterDescription"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/label_description"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:autofillHints=""
                android:text="Date"
                android:textColor="@color/black"
                android:textSize="15dp"
                />

            <EditText
                android:id="@+id/fmTripRegisterStartDate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/label_start_date"
                android:inputType="date"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/fmTripRegisterOwner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="15dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="20dp"
                android:text="Required Risk Assessment"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <Button
                android:id="@+id/fmTripRegisterButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="CREATE TRIP"
                android:textSize="15sp" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>